--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,10 +1,10 @@
 footer {
-    margin-top: 32px;
     height: 4em;
     background-color: white;
     box-shadow: 0px -4px 4px 6px #00000025;
-    margin: -8px;
-    position: absolute;
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-top: 32px;
     bottom: 0;
     width: 100vw;
     display: flex;
