--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -2,14 +2,13 @@ footer {
     height: 4em;
     background-color: white;
     box-shadow: 0px -4px 16px 6px #00000025;
-    margin-left: -8px;
-    margin-right: -8px;
-    margin-top: 16px;
-    width: calc(100vw - 8px);
+    margin: -8px;
+    width: calc(100% + 8px);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2em;
+    bottom: 0;
 }
 
 footer a {
