--- a/assets/templates/header_an.html
+++ b/assets/templates/header_an.html
@@ -6,7 +6,7 @@
         <a href="../../index.php" style="text-decoration: none; color:#625FFF"><span id="textlogo">CMBD</span></a>
     </div>
     <div id="sign-in">
-        <a href="#">
+        <a href="./sign_in.php">
             <span class="material-icons-outlined">
                 login
             </span>
@@ -14,7 +14,7 @@
         </a>
     </div>
     <div id="sign-up">
-        <a href="#">
+        <a href="./sign_up.php">
             <span class="material-icons-outlined">
                 person_add_alt_1
             </span>
