--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -3,12 +3,13 @@ footer {
     background-color: white;
     box-shadow: 0px -4px 16px 6px #00000025;
     margin: -8px;
-    width: calc(100% + 8px);
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2em;
+    position: absolute;
     bottom: 0;
+    gap: 2em;
 }
 
 footer a {
