--- a/assets/styles/logged.css
+++ b/assets/styles/logged.css
@@ -332,6 +332,14 @@
             margin-bottom: 2em;
         }
         
+        .listitem {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            border: 2px solid #3b3947;
+            border-radius: 16px;
+        }
+        
         .film h2 {
             font-size: 18px;
         }
