--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -8,8 +8,8 @@ footer {
     align-items: center;
     justify-content: center;
     position: absolute;
-    bottom: 0;
     gap: 2em;
+    bottom: 0px;
 }
 
 footer a {
